====================================================================================
ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================

******************************************
CHANGELOG: 12-1-2012 
Fix string search for splash screen replace dialog

******************************************
CHANGELOG: 7-1-2012 
Add a dialog to replace splash screen without recompiling

******************************************
CHANGELOG: 09-11-2011 MPB
Really fix the delay problem
Tidy up reversed throttle and trim settings
Trainer weight setting changed (RM)
Enhanced Curve Editing (RM)

******************************************
CHANGELOG: 09-11-2011 MPB
Curve editing updated
Fix delay problem
Fix Reversed throttle with throttle trim bug
Fix getswitch() bug when using !SWn
Change getswitch() to use previous result when recursing deeply

******************************************
CHANGELOG: 04-11-2011 MPB
1) Fix issue 110
2) General edit speaker and Haptic options


******************************************
CHANGELOG: 03-11-2011
1) Fixed compile issue
2) Removed surplus and old comunication protocols from the drop boxes.
3) Removed surplus "-speaker" downloads




