@@ -105,17 +105,62 @@ typedef struct t_EEGeneral {
     uint8_t   disableSplashScreen:1;
     uint8_t   disablePotScroll:1;
     uint8_t   disableBG:1;
-    uint8_t   res1:1;
+    uint8_t   frskyinternalalarm:1;
     uint8_t   filterInput;
     uint8_t   lightAutoOff;
     uint8_t   templateSetup;  //RETA order according to chout_ar array
     int8_t    PPM_Multiplier;
-    uint8_t   respre[2];
+    //uint8_t   respre[2]; //mike please check these are correct
+    uint8_t   FRSkyYellow:4;
+    uint8_t   FRSkyOrange:4;
+    uint8_t   FRSkyRed:4;  //mike please check these are correct
+    uint8_t   hideNameOnSplash:1;
+    uint8_t   spare:3;
     uint8_t   speakerPitch;
-    uint8_t	hapticStrength;
-    uint8_t	speakerMode;
+    uint8_t   hapticStrength;
+    uint8_t   speakerMode;
     uint8_t   res[1];
+  //  uint8_t	FRSkyRed;  //mike please check these are correct
     char      ownerName[GENERAL_OWNER_NAME_LEN];
+
+//    uint8_t   myVers;
+//    int16_t   calibMid[7];
+//    int16_t   calibSpanNeg[7];
+//    int16_t   calibSpanPos[7];
+//    uint16_t  chkSum;
+//    uint8_t   currModel; //0..15
+//    uint8_t   contrast;
+//    uint8_t   vBatWarn;
+//    int8_t    vBatCalib;
+//    int8_t    lightSw;
+//    TrainerData trainer;
+//    uint8_t   view;
+//    uint8_t   disableThrottleWarning:1;
+//    uint8_t   disableSwitchWarning:1;
+//    uint8_t   disableMemoryWarning:1;
+//    uint8_t   beeperVal:3;
+//    uint8_t   reserveWarning:1;
+//    uint8_t   disableAlarmWarning:1;
+//    uint8_t   stickMode;
+//    int8_t    inactivityTimer;
+//    uint8_t   throttleReversed:1;
+//    uint8_t   minuteBeep:1;
+//    uint8_t   preBeep:1;
+//    uint8_t   flashBeep:1;
+//    uint8_t   disableSplashScreen:1;
+//    uint8_t   disablePotScroll:1;
+//    uint8_t   disableBG:1;
+//    uint8_t   res1:1;
+//    uint8_t   filterInput;
+//    uint8_t   lightAutoOff;
+//    uint8_t   templateSetup;  //RETA order according to chout_ar array
+//    int8_t    PPM_Multiplier;
+//    uint8_t   respre[2];
+//    uint8_t   speakerPitch;
+//    uint8_t	hapticStrength;
+//    uint8_t	speakerMode;
+//    uint8_t   res[1];
+//    char      ownerName[GENERAL_OWNER_NAME_LEN];
 } __attribute__((packed)) EEGeneral;
 
 
